# psalter-recitation

./: .gitignore  Dockerfile  README.md  compose.dev.yaml  compose.production.yaml  compose.yaml  pyproject.toml
docs/: architecture.md  usage-guide.md
scripts/: seed_passages_from_api.py  seed_psalms_from_api.py
src/psalter/: __init__.py  bootstrap.py  config.py  logging.py
src/psalter/adapters/: __init__.py  process_runner.py  scripture_catalog_provider.py  system_clock.py
src/psalter/application/: __init__.py  dto.py  errors.py
src/psalter/cli/: __init__.py  app.py  readiness.py
src/psalter/domain/: __init__.py  errors.py  installation.py  learning.py  passage.py  psalm.py  recitation.py  review.py
src/psalter/ports/: __init__.py  audio_recorder.py  installation_repository.py  learning_repository.py  passage_repository.py  psalm_repository.py  recitation_committer.py  recitation_repository.py  review_repository.py  scripture_catalog_provider.py  transcriber.py  uploaded_audio_preparer.py
src/psalter/web/: __init__.py  app.py  dependencies.py  errors.py
tests/integration/: test_api.py  test_cli.py  test_whisper_cpp_integration.py
tests/integration/persistence/: test_sqlite_migrations.py
tests/unit/: test_logging.py
tests/unit/application/: test_alignment.py  test_assessment.py  test_ffmpeg_audio_recorder.py  test_installation_service.py  test_masking.py  test_normalization.py  test_recitation_service.py  test_segmentation.py  (+4 more)
web/: Dockerfile.production  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: index.css  main.tsx
(+69 files in other folders)
